Time: 227 ms (28.92%), Space: 51.6 MB (48.11%) - LeetHub